--- a/jenkinsFile
+++ b/jenkinsFile
@@ -3,20 +3,19 @@ pipeline {
     stages {
         stage('clone repo') { 
             steps {
-                bat "git clone https://github.com/amitnit26/my-app.git"
-                bat "mv clean -f my-app"
+                bat "mvn clean"
                 // 
             }
         }
         stage('Test') { 
             steps {
-                bat "mvn test -f my-app"
+                bat "mvn test"
                 // 
             }
         }
         stage('Deploy') { 
             steps {
-                bat "mvn package -f my-app"
+                bat "mvn package"
                 // 
             }
         }
